modernize getUnlockRewards